2015-01-11  Per Bothner  <per@bothner.com>

	* XQParser.java (makeExprSequence): Using constant for AppendValues.
	This means ApplyExp.isAppendValues matches.
	(parseExprSequence): If empty, use QuoteExp.voidObjectExp.
	This avoids warning about using void-valued expression.

2014-11-16  Per Bothner  <per@bothner.com>

	* XQParser.java (parse): Test for duplicate import.

2014-07-02  Per Bothner  <per@bothner.com>

	* XQParser.java (treatAs): Update for new Convert handling.

2014-05-21  Per Bothner  <per@bothner.com>

	* XQParser.java (parseContent): Literal direct attribute or element
	content is now presented by a quoted FString, to fix some corner cases.

2014-05-03  Per Bothner  <per@bothner.com>

	* XQResolveNames.java (visitReference): Update to use KawaServlet.
	Belated fix needed because of 2010 servlet changes.

2014-02-23  Per Bothner  <per@bothner.com>

	* XQParser.java: Handle encoding declaration.

2014-02-16  Per Bothner  <per@bothner.com>

	* XQParser.java: Make sure Error is uncaught or re-thrown.

2013-11-10  Per Bothner  <per@bothner.com>

	* XQParser.java: Update for new FormStack APIs.

2013-11-02  Per Bothner  <per@bothner.com>

	* XQResolveNames.java: Mark docCached method as side-effect free.
	This avoids a long timeout in XQTS's K2-SeqDocFunc-13 test.

2012-10-20  Charles Turner <chturne@gmail.com>
	    Per Bothner  <per@bothner.com>

	Re-factor type lookup to avoid Scheme dependencies.
	* XQuery.java (getStandardType): Make non-static.
	* XQResolveNames.java: Access current langauge rather than Scheme.
	Use getTypeFor rather than string2Type.

2012-10-06  Per Bothner  <per@bothner.com>

	Implement check for a cycle in variale initialization.
	* XQResolveNames.java (CycleDetector): New helper member class.
	(resolveModule): Check for cycle.

2012-07-15  Per Bothner  <per@bothner.com>

	* XQParser.java (makeBinary): Update OP_RANGE_TO.

2012-07-14  Per Bothner  <per@bothner.com>

	* XQuery.java (initXQuery): Update sublist and subsequence.
