@@ -1,3 +1,9 @@
+2015-02-20  Per Bothner  <per@bothner.com>
+
+	* XQResolveNames.java (class CycleDetector): Change logic so we
+	create a fresh CycleDetector for each module variable we check.
+	(scanVariable): Make static.
+
 2015-01-11  Per Bothner  <per@bothner.com>
 
 	* XQParser.java (makeExprSequence): Using constant for AppendValues.
